@@ -43,6 +43,46 @@ CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::~Reader_T (void)
 
 //for the requirement : 'samples ordered by instances' the following settings are necessary:
 // ordered_access -> true   and     DDS_INSTANCE_PRESENTATION_QOS (default) .
+template <typename DDS_TYPE, typename CCM_TYPE >
+CORBA::ULong
+CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::get_nr_valid_samples (
+  const DDS_SampleInfoSeq & sample_info)
+{
+  CORBA::ULong nr_of_samples = 0;
+  for (::DDS_Long i = 0 ; i < sample_info.length(); i++)
+    {
+      if(sample_info[i].valid_data)
+        {
+          ++nr_of_samples;
+        }
+    }
+  return nr_of_samples;
+}
+
+
+template <typename DDS_TYPE, typename CCM_TYPE >
+void
+CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::read_without_instance (
+  typename DDS_TYPE::dds_seq_type & data,
+  DDS_SampleInfoSeq & sample_info)
+{
+  DDS_ReturnCode_t retval = this->impl_->read (
+                                data,
+                                sample_info,
+                                DDS_LENGTH_UNLIMITED,
+                                DDS_READ_SAMPLE_STATE | DDS_NOT_READ_SAMPLE_STATE,
+                                DDS_NEW_VIEW_STATE | DDS_NOT_NEW_VIEW_STATE,
+                                DDS_ALIVE_INSTANCE_STATE);
+
+  if (retval != DDS_RETCODE_OK)
+    {
+      this->impl_->return_loan(data, sample_info);
+      CIAO_ERROR ((LM_ERROR, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_without_instance - ")
+                            ACE_TEXT ("retval is %C\n"), translate_retcode(retval)));
+      throw ::CCM_DDS::InternalError (retval, 0);
+    }
+}
+
 
 template <typename DDS_TYPE, typename CCM_TYPE >
 void
@@ -72,7 +112,6 @@ CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::read_last (
         nr_of_last_samples = 0;
         CIAO_DEBUG ((LM_DEBUG, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_last - ")
                                 ACE_TEXT ("number_of_samples <%d>\n"), data.length() ));
-        //infoseq <<= sample_info; ??
 
         // count the last samples of all instances
         for (::DDS_Long i = 0 ; i < sample_info.length(); i++)
@@ -117,57 +156,38 @@ CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::read_all (
           ::CCM_DDS::ReadInfoSeq_out infos)
 {
   //this function has to return all samples of all instances
-  typename CCM_TYPE::seq_type::_var_type  inst_seq = new typename CCM_TYPE::seq_type;
-  ::CCM_DDS::ReadInfoSeq_var infoseq = new ::CCM_DDS::ReadInfoSeq;
-
   DDS_SampleInfoSeq sample_info;
   typename DDS_TYPE::dds_seq_type data;
 
-  DDS_ReturnCode_t retval = this->impl_->read ( data,
-                            sample_info,
-                            DDS_LENGTH_UNLIMITED,
-                            DDS_READ_SAMPLE_STATE | DDS_NOT_READ_SAMPLE_STATE ,
-                            DDS_NEW_VIEW_STATE | DDS_NOT_NEW_VIEW_STATE,
-                            DDS_ALIVE_INSTANCE_STATE);
-    CORBA::ULong nr_of_samples = 0;
-    CORBA::ULong ix = 0;
-    switch(retval)
-      {
-        case DDS_RETCODE_OK:
-          CIAO_DEBUG ((LM_DEBUG, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_all - ")
-                                 ACE_TEXT ("number_of_samples <%d>\n"), data.length ()));
-          //count the number of valid data
-          for (::DDS_Long i = 0 ; i < sample_info.length(); i++)
-            {
-              if(sample_info[i].valid_data)
-                {
-                  ++nr_of_samples;
-                }
-            }
-          //infoseq->length(sample_info.length ());
-          infoseq->length(nr_of_samples);
-          inst_seq->length(nr_of_samples);
-          for (::DDS_Long i = 0 ; i < sample_info.length(); i++)
-            {
-                if(sample_info[i].valid_data)
-                  {
-                    sample_info[i].source_timestamp >>= infoseq[ix].source_timestamp;
-                    inst_seq[ix] = data[i];
-                    ++ix;
-                  }
-            }
-          break;
-        case DDS_RETCODE_NO_DATA:
-          CIAO_DEBUG ((LM_INFO, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_all - No data")));
-          break;
-        default:
-          CIAO_ERROR ((LM_ERROR, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_all - ")
-                                ACE_TEXT ("retval is %C\n"), translate_retcode(retval)));
-          throw ::CCM_DDS::InternalError (retval, 0);
-          break;
-      }
+  read_without_instance (data, sample_info);
+
+  CORBA::ULong nr_of_valid_samples = get_nr_valid_samples (sample_info);
+  CIAO_DEBUG ((LM_DEBUG, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_all - ")
+                          ACE_TEXT ("total number of samples <%d> - ")
+                          ACE_TEXT ("valid number of samples <%d>\n"), 
+                            data.length (),
+                            nr_of_valid_samples));
+
+  typename CCM_TYPE::seq_type::_var_type  inst_seq = new typename CCM_TYPE::seq_type;
+  ::CCM_DDS::ReadInfoSeq_var infoseq = new ::CCM_DDS::ReadInfoSeq;
+
+  infoseq->length (nr_of_valid_samples);
+  inst_seq->length (nr_of_valid_samples);
+
+  CORBA::ULong ix = 0;
+
+  for (::DDS_Long i = 0 ; i < sample_info.length(); i++)
+    {
+        if(sample_info[i].valid_data)
+          {
+            sample_info[i].source_timestamp >>= infoseq[ix].source_timestamp;
+            inst_seq[ix] = data[i];
+            ++ix;
+          }
+    }
   //return the loan
   this->impl_->return_loan(data,sample_info);
+  
   infos = infoseq._retn ();
   instances = inst_seq._retn();
 }
@@ -197,6 +217,32 @@ CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::check_handle (
 
 template <typename DDS_TYPE, typename CCM_TYPE >
 void
+CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::read_with_instance (
+  typename DDS_TYPE::dds_seq_type & data,
+  const ::DDS_InstanceHandle_t & lookup_hnd,
+  DDS_SampleInfoSeq & sample_info)
+{
+  CIAO_DEBUG ((LM_INFO, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_with_instance - ")
+                        ACE_TEXT ("Reading with instance.\n")));
+  DDS_ReturnCode_t retval = this->impl_->read_instance (
+                                      data,
+                                      sample_info,
+                                      DDS_LENGTH_UNLIMITED,
+                                      lookup_hnd,
+                                      DDS_READ_SAMPLE_STATE | DDS_NOT_READ_SAMPLE_STATE ,
+                                      DDS_NEW_VIEW_STATE | DDS_NOT_NEW_VIEW_STATE,
+                                      DDS_ALIVE_INSTANCE_STATE);
+  if (retval != DDS_RETCODE_OK)
+    {
+      this->impl_->return_loan(data, sample_info);
+      CIAO_ERROR ((LM_ERROR, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_with_instance - ")
+                            ACE_TEXT ("retval is %C\n"), translate_retcode(retval)));
+      throw ::CCM_DDS::InternalError (retval, 0);
+    }
+}
+
+template <typename DDS_TYPE, typename CCM_TYPE >
+void
 CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::read_one_last (
           typename DDS_TYPE::value_type& an_instance,
           ::CCM_DDS::ReadInfo_out info,
@@ -207,29 +253,12 @@ CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::read_one_last (
   DDS_SampleInfoSeq sample_info;
   typename DDS_TYPE::dds_seq_type data;
   //for now, only read with instance...
-  CIAO_DEBUG ((LM_INFO,
-              ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_one_last - ")
-              ACE_TEXT ("Read with instance.\n")));
-  DDS_ReturnCode_t retval = this->impl_->read_instance(
-                data,
-                sample_info,
-                DDS_LENGTH_UNLIMITED,
-                lookup_hnd,
-                DDS_READ_SAMPLE_STATE | DDS_NOT_READ_SAMPLE_STATE ,
-                DDS_NEW_VIEW_STATE | DDS_NOT_NEW_VIEW_STATE,
-                DDS_ALIVE_INSTANCE_STATE);
-  if (retval != DDS_RETCODE_OK)
-    {
-      this->impl_->return_loan(data, sample_info);
-      CIAO_ERROR ((LM_ERROR, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_one_last - ")
-                            ACE_TEXT ("retval is %C\n"), translate_retcode(retval)));
-      throw ::CCM_DDS::InternalError (retval, 0);
-    }
+  read_with_instance (data, lookup_hnd, sample_info);
 
   ::DDS_Long sample = data.length();
   CIAO_DEBUG ((LM_INFO,
               ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_one_last - ")
-              ACE_TEXT ("number_of_samples = %d\n"),
+              ACE_TEXT ("total number of samples <%d>\n"),
               sample));
   while (sample >= 0 && !sample_info[sample-1].valid_data)
     --sample;
@@ -258,38 +287,21 @@ CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::read_one_all (
   DDS_SampleInfoSeq sample_info;
   typename DDS_TYPE::dds_seq_type data;
 
-  CIAO_DEBUG ((LM_INFO, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_one_all - ")
-                        ACE_TEXT ("Reading with instance.\n")));
-  DDS_ReturnCode_t retval = this->impl_->read_instance (
-              data,
-              sample_info,
-              DDS_LENGTH_UNLIMITED,
-              lookup_hnd,
-              DDS_READ_SAMPLE_STATE | DDS_NOT_READ_SAMPLE_STATE ,
-              DDS_NEW_VIEW_STATE | DDS_NOT_NEW_VIEW_STATE,
-              DDS_ALIVE_INSTANCE_STATE);
-  if (retval != DDS_RETCODE_OK)
-    {
-      CIAO_ERROR ((LM_ERROR, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_one_last - ")
-                            ACE_TEXT ("retval is %C\n"), translate_retcode(retval)));
-      this->impl_->return_loan(data, sample_info);
-      throw ::CCM_DDS::InternalError (retval, 0);
-    }
+  read_with_instance (data, lookup_hnd, sample_info);
 
   // Count the number of valid samples
-  CORBA::ULong nr_of_samples = 0;
-  for (::DDS_Long i = 0 ; i < sample_info.length(); i++)
-    {
-      if(sample_info[i].valid_data)
-        {
-          ++nr_of_samples;
-        }
-    }
+  CORBA::ULong nr_of_valid_samples = get_nr_valid_samples (sample_info);
+  CIAO_DEBUG ((LM_DEBUG, ACE_TEXT ("CIAO::DDS4CCM::RTI::Reader_T::read_all - ")
+                          ACE_TEXT ("total number of samples <%d> - ")
+                          ACE_TEXT ("valid number of samples <%d>\n"), 
+                            data.length (),
+                            nr_of_valid_samples));
 
   typename CCM_TYPE::seq_type::_var_type inst_seq = new typename CCM_TYPE::seq_type;
   ::CCM_DDS::ReadInfoSeq_var infoseq = new ::CCM_DDS::ReadInfoSeq;
-  infoseq->length(nr_of_samples);
-  inst_seq->length(nr_of_samples);
+
+  infoseq->length (nr_of_valid_samples);
+  inst_seq->length (nr_of_valid_samples);
 
   // Copy the valid samples
   CORBA::ULong ix = 0;
